# sccs_bot

./: README.md  app.py  pyproject.toml  requirements.txt
scripts/: chat_sbox.py
