[project]
name = "sccs-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chatlas>=0.8.1",
    "ipykernel>=6.29.5",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "pip>=25.1.1",
    "py2pdf>=0.1.3",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.0",
    "shiny>=1.4.0",
]
